--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -136,6 +136,10 @@
     margin-bottom: 0;
   }
 
+  .btn{
+    margin-top: 1rem;
+  }
+
  .btn-outline-primary {
      border-color: #9400D3;
  }
@@ -143,5 +147,6 @@
  .btn-outline-secondary {
      border-color: #9e59a0;
  }
+
 
 
