--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,4 +1,6 @@
+$font-family-base: "Raleway", sans-serif;
 
+/*
 // Body
 $body-bg: #f5f8fa;
 
@@ -36,3 +38,4 @@ $input-color-placeholder: lighten($text-color, 30%);
 
 // Panels
 $panel-default-heading-bg: #fff;
+*/
