--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,41 +1,34 @@
 $font-family-base: "Raleway", sans-serif;
+$enable-gradients: true;
+$enable-shadows: true;
+$headings-color: white;
+$hr-border-color: white;
 
-/*
-// Body
-$body-bg: #f5f8fa;
+$primary: rgba(0, 16, 41, 0.644);
+$secondary: rgb(40, 0, 77);
 
-// Borders
-$laravel-border-color: darken($body-bg, 10%);
-$list-group-border: $laravel-border-color;
-$navbar-default-border: $laravel-border-color;
-$panel-default-border: $laravel-border-color;
-$panel-inner-border: $laravel-border-color;
 
-// Brands
-$brand-primary: #3097D1;
-$brand-info: #8eb4cb;
-$brand-success: #2ab27b;
-$brand-warning: #cbb956;
-$brand-danger: #bf5329;
+hr {
+    height: 1rem;
+    position: relative;
+    margin: 4rem;
+    color: white;
+    &:after {
+      font-family: 'FontAwesome';
+      padding: 0 1rem;
+      position: absolute;
+      background-color: $secondary;
+      left: 50%;
+      transform: translatex(-50%);
+      margin-top: -0.75em;
+      font-size: 1.25rem;
+    }
 
-// Typography
-$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
-$font-family-sans-serif: "Raleway", sans-serif;
-$font-size-base: 14px;
-$line-height-base: 1.6;
-$text-color: #636b6f;
-
-// Navbar
-$navbar-default-bg: #fff;
-
-// Buttons
-$btn-default-color: $text-color;
-
-// Inputs
-$input-border: lighten($text-color, 40%);
-$input-border-focus: lighten($brand-primary, 25%);
-$input-color-placeholder: lighten($text-color, 30%);
-
-// Panels
-$panel-default-heading-bg: #fff;
-*/
+    //FontAwsome glyph shortcuts
+    &.cubes:after {
+      content: "\f1b3";
+    }
+    &.globe:after {
+      content: "\f0ac";
+    }
+  }
