--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,6 +25,10 @@ hr.globe:after {
   content: "\F0AC";
 }
 
+body {
+  padding-top: 5rem;
+}
+
 /*!
  * Bootstrap v4.0.0-beta.2 (https://getbootstrap.com)
  * Copyright 2011-2017 The Bootstrap Authors
