--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -38,4 +38,13 @@ hr {
 
 body {
   padding-top: 5rem;
+  padding-bottom: 3rem;
+  //margin-bottom: 5rem;
+}
+
+.footer{
+  position: absolute;
+  padding-top: 3rem;
+  height: 3rem;
+  line-height: 1.5rem;
 }
