--- a/public/css/app.css
+++ b/public/css/app.css
@@ -25,8 +25,20 @@ hr.globe:after {
   content: "\F0AC";
 }
 
+hr.spaceship:after {
+  content: "\F197";
+}
+
 body {
   padding-top: 5rem;
+  padding-bottom: 3rem;
+}
+
+.footer {
+  position: absolute;
+  padding-top: 3rem;
+  height: 3rem;
+  line-height: 1.5rem;
 }
 
 /*!
